# Polymarket-Kalshi-Arbitrage-bot-rust

./: .gitignore  Cargo.toml  kalshi_team_cache.json
config/: ai_categories.json  category_equivalence.json  manual_overrides.json
docs/notes/: 2026-04-21-polymarket-fee-survey.md
docs/superpowers/plans/: 2026-04-21-multi-category-matching-pr1.md  2026-04-21-multi-category-matching-pr2.md  2026-04-21-multi-category-matching-pr3.md  2026-05-01-manual-poly-balance.md  2026-05-02-matching-prefilter-and-llm-swap.md
docs/superpowers/specs/: 2026-04-21-multi-category-matching-design.md  2026-05-01-manual-poly-balance-design.md  2026-05-02-matching-prefilter-and-llm-swap-design.md
scripts/: get_poly_creds.py  get_poly_creds_v2.py  survey_fees.sh  test_creds_l2.py
scripts/ai_matcher/: README.md  inspect_apis.py  pyproject.toml
scripts/ai_matcher/src/ai_matcher/: __init__.py  __main__.py  categories.py  cli.py  embedder.py  ingestion.py  overrides.py  pipeline.py  report.py  retrieval.py  scheduler.py  verifier.py
scripts/ai_matcher/src/ai_matcher/templates/: report.html.j2
scripts/ai_matcher/tests/: test_categories.py  test_cli.py  test_embedder.py  test_ingestion.py  test_overrides.py  test_pipeline.py  test_report.py  test_retrieval.py  test_scheduler.py  test_verifier.py
scripts/poly_l2_auth/: README.md  pyproject.toml
scripts/poly_l2_auth/src/poly_l2_auth/: get_v1.py  get_v2.py  test_l2.py
src/: balance.rs  canonical.rs  config.rs  discovery.rs  execution.rs  fees.rs  fred.rs  kalshi.rs  lib.rs  main.rs  polymarket.rs  polymarket_clob.rs  types.rs
src/adapters/: ai_reader.rs  fomc.rs  mod.rs  sports.rs
tests/: integration_tests.rs
