[project]
name = "ai-matcher"
version = "0.1.0"
description = "Standalone sidecar that pairs Kalshi and Polymarket markets via embeddings + LLM verification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai_matcher = "ai_matcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_matcher"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
